<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/TituloRegistroPlastico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/aniadir_text"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/FotoPlastic"
            android:layout_width="65dp"
            android:layout_height="81dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/take_photo_background" />

        <Button
            android:id="@+id/btnCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:gravity="center_horizontal"
            android:text="@string/btn_foto_plastic"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txtNamePlastic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_nombre_plastic"
            android:inputType="textPersonName"
            android:textColorHint="#2196F3"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtFecPlastic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_fecha_plastic"
            android:inputType="date"
            android:textColorHint="#2196F3"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtOrigenPlastic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_origen_plastic"
            android:inputType="textPersonName"
            android:textColorHint="#2196F3"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtUbicationPlastic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_ubicación_plastic"
            android:inputType="textPersonName"
            android:textColorHint="#2196F3"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtDescriptionPlastic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_descripción_plastic"
            android:inputType="textMultiLine|textPersonName"
            android:lines="5"
            android:textColorHint="#2196F3"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/categoria_plastic"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:backgroundTintMode="add"
            android:entries="@array/strCategorias"
            android:foregroundTint="#3F51B5"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:text="@string/btn_registrar_plastic"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</LinearLayout>